# pico-lamp

./: .gitignore  LICENSE  README.md
NeoPixel/: CMakeLists.txt  ws2812b.c  ws2812b.h  ws2812b.pio
Pico_Lamp_Server/: platformio.ini
Pico_Lamp_Server/data/: dark.css  dark.html  light.css  light.html
Pico_Lamp_Server/generator/: generator.py  generator.sh
Pico_Lamp_Server/src/: main.cpp
Pico_Lamp_Server/template/: template.cpp
